# wgsl-minifier

./: Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: lib.rs  main.rs
tests/: hardcoded.rs
