[package]
name = "wgsl-minifier"
version = "0.4.2"
edition = "2021"
license = "MIT"
description = "A command-line tool for minifying WGSL shaders."
homepage = "https://github.com/LucentFlux/wgsl-minifier"
repository = "https://github.com/LucentFlux/wgsl-minifier"
readme = "README.md"
keywords = ["gamedev", "graphics", "wgsl", "wgpu", "shader"]
categories = ["game-development", "graphics"]
include = ["/Cargo.toml", "/LICENSE", "/README.md", "/src/**"]

[dependencies]
naga = { version = "0.20", features = ["wgsl-in", "wgsl-out"] }
unicode-ident = "1.0"

# Used for main
clap = { version = "4.5", features = ["cargo"] }
codespan-reporting = "0.11"