[package]
name = "wgsl-minifier"
version = "0.7.0"
edition = "2021"
license = "MIT"
description = "A command-line tool for minifying WGSL shaders."
homepage = "https://github.com/LucentFlux/wgsl-minifier"
repository = "https://github.com/LucentFlux/wgsl-minifier"
readme = "README.md"
keywords = ["gamedev", "graphics", "wgsl", "wgpu", "shader"]
categories = ["game-development", "graphics"]
include = ["/Cargo.toml", "/LICENSE", "/README.md", "/src/**"]

[dependencies]
naga = { version = "24.0", features = ["wgsl-in", "wgsl-out"] } # Breaking change to update - API takes Naga module
unicode-ident = "1.0"

# Used for main
clap = { version = "4.5", features = ["cargo"], optional = true }
codespan-reporting = { version = "0.12", optional = true }

[features]
bin = ["clap", "codespan-reporting"]

[[bin]]
name = "wgsl-minifier"
required-features = ["bin"]